# UcubMQDraw

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  merge-docs.bat  merge-docs.ps1  merge-docs.sh  pyproject.toml  requirements.txt  start.bat  start.sh  总.md  项目计划书.md
backend/: .env.example
data/: tasks.json
docker/postgres/init/: 01_init.sql
docs/: AI生成的项目计划书.md  API接口.md  README.md  api_contract.md  mq_contract.md  ui_design.md  vue重构方案.md  websocket_contract.md  代码阅读指南.md  开发入门.md  新增工具开发指南.md
docs/archive/: AI生成的项目计划书.md  features-to-tools术语对照.md  完整版方案归档.md  归档与现行规范差异.md
docs/details/: Mock模式设计.md  OSS上传设计.md  RocketMQ对接设计.md  WebSocket推送机制.md  imggen-stub联调模式设计.md  任务状态与任务流转.md  数据库存储设计.md  用户与鉴权设计.md  部署与环境变量.md
docs/examples/: HomePage完整示例.md  MaskEditor示例.md  OSS上传示例.md  RocketMQ对接示例.md  WebSocket推送示例.md  imggen-stub示例.md  任务状态与流转示例.md  前端HTTP封装示例.md  前端工具模块示例.md  后端工具处理器示例.md
ucub_mqdraw/: __init__.py  config.py  constants.py  models.py  store.py
ucub_mqdraw/services/: api_client.py  mock_task_runner.py  mq_contract.py  websocket_client.py
ucub_mqdraw/ui/: center_panel.py  events.py  layout.py  left_panel.py  right_panel.py  styles.py  tool_grid.py
ucub_mqdraw/utils/: id_generator.py  image.py  mask.py
