[project]
name = "ucub-mqdraw"
version = "0.1.0"
description = "UcubMQDraw Gradio 前端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.44.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
